polish tests to use spring app context