@@ -46,7 +46,7 @@ public abstract class AbstractDefaultAttributePersonAttributeDao extends Abstrac
     protected Map<String, List<Object>> toSeedMap(final String username) {
         val values = Collections.singletonList((Object) username);
         val usernameAttribute = this.usernameAttributeProvider.getUsernameAttribute();
-        val seed = Collections.singletonMap(usernameAttribute, values);
+        val seed = Map.of(usernameAttribute, values);
         LOGGER.debug("Created seed map [{}] for username [{}]", seed, username);
         return seed;
     }
