@@ -7,7 +7,6 @@ import lombok.val;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -33,7 +32,7 @@ class DefaultPrincipalFactoryTests {
     @Test
     void checkCreatingSimplePrincipalWithAttributes() throws Throwable {
         val f = PrincipalFactoryUtils.newPrincipalFactory();
-        val p = f.createPrincipal(UID, Collections.singletonMap("mail", List.of("final@example.com")));
+        val p = f.createPrincipal(UID, Map.of("mail", List.of("final@example.com")));
         assertEquals(UID, p.getId());
         assertEquals(1, p.getAttributes().size());
         assertTrue(p.getAttributes().containsKey("mail"));
