@@ -11,7 +11,6 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 
-import java.util.Collections;
 import java.util.Objects;
 
 /**
@@ -40,7 +39,7 @@ public class GoogleCloudTicketRegistryQueuePublisher implements QueueableTicketR
     public void publishMessageToQueue(final BaseMessageQueueCommand cmd) {
         FunctionUtils.doAndHandle(__ -> {
             LOGGER.debug("[{}] is publishing message [{}]", cmd.getPublisherIdentifier().getId(), cmd);
-            val headers = Collections.singletonMap(GcpPubSubHeaders.ORDERING_KEY, cmd.getPublisherIdentifier().getId());
+            val headers = Map.of(GcpPubSubHeaders.ORDERING_KEY, cmd.getPublisherIdentifier().getId());
             val future = pubSubTemplate.publish(QUEUE_TOPIC, cmd, headers);
             Objects.requireNonNull(future);
             val publishedMessage = future.get();
